# sdu-agro-tools

./: .gitignore  .pre-commit-config.yaml  AgroTool_ColorSegmenter.py  Makefile  README.md  __init__.py  cdc_algorithm.py  cdc_toolbar_dialog.py  cdc_toolbar_dialog.ui  crop_row_algorithm.py  crop_row_toolbar_dialog.py  crop_row_toolbar_dialog.ui  metadata.txt  plugin_upload.py  pyproject.toml  requirements.txt  resources.py  resources.qrc  sdu_agro_tools.py  sdu_agro_tools_provider.py  task_progress_bar.py  task_progress_bar.ui
.github/workflows/: generate_docs.yml  publish_package.yml
Segmenter/: segmenter_thread2.py
agrotool_colorsegmenter/: AgroTool_ColorSegmenter.py  AgroTool_ColorSegmenter_algorithm.py  AgroTool_ColorSegmenter_dialog.py  AgroTool_ColorSegmenter_dialog_base.ui  AgroTool_ColorSegmenter_provider.py  Makefile  README.html  README.md  README.txt  __init__.py  compile.bat  metadata.txt  pb_tool.cfg  progressbar_dialog.py  requirements.txt
agrotool_colorsegmenter/Segmenter/: colormodels.py  main.py  main_provider.py  segmenter.py  segmenter_thread.py  segmenter_thread2.py  tiler.py
agrotool_colorsegmenter/help/source/: conf.py  how_to_create_dataset.rst  index.rst  installation.rst  references.rst
agrotool_colorsegmenter/test/: test_AgroTool_ColorSegmenter_dialog.py  test_resources.py
docs/source/: background.rst  conf.py  contributing.rst  how_to_create_dataset.rst  index.rst  installation.rst  notes.rst  references.rst  tutorials_guides.rst
docs/source/_static/: custom.css
docs/source/explanations/: cdc-ref.rst  crop-row-detector-ref.rst
docs/source/tutorials/: cdc-dataset.rst  cdc.rst  crop-row-detector.rst
help/source/: background.rst  conf.py  how_to_guide.rst  index.rst  installation.rst  references.rst  tutorial_guides.rst
sdu_agro_tools/: AgroTool_ColorSegmenter.py  AgroTool_ColorSegmenter_algorithm.py  AgroTool_ColorSegmenter_dialog.py  AgroTool_ColorSegmenter_dialog_base.ui  AgroTool_ColorSegmenter_provider.py  ColorSegmenter_progressbar.ui  progressbar_dialog.py
src/sdu_agro_tools/: Makefile  __init__.py  metadata.txt  requirements.txt  sdu_agro_tools.py  sdu_agro_tools_provider.py
src/sdu_agro_tools/cdc/: cdc_algorithm.py  cdc_toolbar_dialog.py  cdc_toolbar_dialog.ui
src/sdu_agro_tools/crop_row_detector/: crop_row_toolbar_dialog.py  crop_row_toolbar_dialog.ui
src/sdu_agro_tools/utils/: task_progress_bar.py
test/: test_AgroTool_ColorSegmenter_dialog.py  test_qgis_environment.py  test_resources.py  test_translations.py
