[project]
name = "sdu-agro-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cdc>=1.1.2",
    "numpy<2.0.0",
    "pyqt5>=5.15.11",
    "qgis-stubs>=0.2.0.post1",
    "rasterio>=1.4.3",
    "sphinx>=8.2.3",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.1",
  "mypy>=1.13.0",
]

[tool.codespell]
check-hidden = true
skip = ".git,venv,*.c,help/*"
ignore-words-list = "mor, FPR"

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true
extend-exclude = ["test", "help", "plugin_upload.py"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "PGH",
  "PT",
  "SIM",
  "UP",
]

ignore = [
  # Doc string format currently not used
  "D205",
  "D401",
  # Use ternary operator instead of if/else
  "SIM108",
  # docstring ignores - conflicting rules
  "D203",
  "D212",
  # as recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "E501",
  # still using D102 since docstring inherited is not supported in ruff"
  "D102",
  # for now ignore all docstring
  "D",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "D104",
  "F401",
  "F403",
]
"test/*" = ["D"]
"help/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
files = "*.py"
exclude = "ui\\.py$"
exclude_gitignore = true

# Make mypy and mypy from pre-commit behave alike
disable_error_code = "import-untyped"

# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
extra_checks = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = false

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
